# rclc

./: .gitignore  README.md
.github/workflows/: client.yml  common.yml  daemon.yml  rust.yml  server.yml
client/: Cargo.toml  build.rs
client/src/: args.rs  fifo.rs  hook.rs  main.rs  tui.rs
common/: Cargo.toml
common/src/: ciphers.rs  client_daemon.rs  lib.rs  net.rs  structures.rs
daemon/: Cargo.toml
daemon/src/: client_server.rs  contact.rs  discovery.rs  listen.rs  main.rs  net.rs  notif.rs
daemon/src/net/: listen.rs
proto/: client_daemon.proto
scripts/: install.sh  uninstall.sh
server/: Cargo.toml
server/src/: cleanable.rs  discovery.rs  main.rs  routes.rs
