[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
anyhow = "1"
rmp-serde = "1"
chrono = "0.4"
crossterm = "0.24"
bunt = "0.2.6"
mio = "0.8.4"
dirs = "4.0.0"

[dependencies.common]
path = "../common"
features = ["rocket"]
