[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.6.0"
postcard="1.0.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4.21"
features = ["serde"]
