[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
reqwest = { version = "0.11.11", features = ["json"] }
common = { path = "../common" }
anyhow = "1.0.61"
tokio = "1.20.1"
log = "0.4.14"
env_logger = "0.9.0"
