[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
reqwest = { version = "0.11.11", features = ["json"] }
common = { path = "../common", features = ["rocket"] }
anyhow = "1.0.61"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0"
tonic = "0.8.2"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"
